каждый игрок ходит по своей трактории

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         </div>
 
         <div class="chips">
-            <img id="firstPlayer" class="firstPlayer" src="image/car_64.png" alt="car">
+            <img id="firstPlayer" class="firstPlayer" src="image/car_64.png" alt="firstPlayer">
+            <img id="secondPlayer" class="secondPlayer" src="image/car_2.png" alt="secondPlayer">
+            <img id="thirdPlayer" class="thirdPlayer" src="image/car_3.png" alt="thirdPlayer">
+            <img id="fourthPlayer" class="fourthPlayer" src="image/car_4.png" alt="fourthPlayer">
         </div>
     </div>
 
