решен вопрос с телепортом

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="cell23" class="rectangle-h history" style="top:200px">и</div>
         </div>
         <div id="rollDice" class="rollDice">
-            <h3>ваш ход</h3>
+            <h3 id="numberPlayer">Ходит желтый</h3>
             <input type="button" onclick="dicePlaying()" value="бросить кубики">
         </div>
 
